[project]
name = "liquidity-map"
version = "0.1.0"
description = "Streamlit liquidity map overlay for stock charts"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32",
    "plotly>=5.18",
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2",
    "python-dotenv>=1.0",
    "robin-stocks>=3.0",
]

[project.scripts]
liquidity-map = "app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["liquidity_map*"]